# NuupXe

./: .gitignore  Credentials.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PROPOSAL.md  README  README.md  READMEmd  ROADMAP.md  SUMMARY.md  SUMMARY_OLD.md  TODO  __init__.py  cancun.py  cancun.sh  cancunirlp.py  nuupxe.py  nuupxe.sh  nuupxeMain.py  pyproject.toml  requirements.txt  serviceManager.py  setup.py
configuration/: aprstt.config  custom_decode  general.config  general.config.example  general.configuration  repeaters  services.config.example  stations  stations.config
core/: GoogleTTS.py  __init__.py  alive.py  aprsfi.py  aprsnet.py  bing.py  camera.py  emailx.py  google.sh  irlp.py  morse.py  observer.py  original.voicesynthetizer.py  phonetic.py  pushtotalk.py  randomizer.py  speechrecognition.py  system.py  telegram.py  telegrambot.py  twitterc.py  utilities.py  voice.py  voiceapplication.py  voicecommand.py  voicerecognition.py  voicerss.sh  voiceservices.py  voicesynthesizer.py  voicesynthetizer.py  voicetospeech.py  wolfram.py  xspeechrecognition.py  xvoice.py
documentation/: Actualizacion.md  Arjac.md  Credentials.md  Dependencies.md  Installation.md  InstallationConfiguration.md  InstallationDependencies.md  InstallationScheduling.md  InstallationSetup.md  InstallationSourceCode.md  Introduction.md  Modules.md  ServiceManager.md  Services.md  SpeechRecognition.md  Translation.md  Weather.md  mycroft.md  weather.md
documentation/services/: ServiceManager.md  Telegram.md
learning/: __init__.py  fmre.py  fmre.reglamento.1  fmre.reglamento.3  fmre.reglamento.5  morsecontest.text  morseteacher.py  reglamentos.1  reglamentos.2  reglamentos.3  reglamentos.4  reglamentos.5  reglamentos.py
modules/: __init__.py  alive.py  aprstracker.py  aprstt.py  assistant.py  audiocommandmanager.py  camera.py  cancun.py  cancuntest.py  caudio.py  clock.py  command.py  commandterminal.py  commandtop.py  id.py  identification.py  messages.py  meteorology.py  morse.py  news.py  phonetic.py  poc.py  poctwitter.py  pushtotalk.py  querymaster.py  seismology.py  selfie.py  sstv.py  tracker.py  twitter.py  twitterc.py  voiceapp.py  voicecommand.py  voiceexperimental.py  voicemail.py  voicemailer.py  voicesynthetizer.py  weather.py  wolfram.py  wolframalpha.py
morsefiles/: README.txt  play_ogg.py
output/: README
setup/: systemAptGet.sh  systemPip.sh
