[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuupxe"
version = "2.0.0"
description = "Amateur Radio Voice Services with AI/LLM Integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
authors = [
    {name = "NuupXe Project", email = "contact@nuupxe.org"}
]
keywords = [
    "ham radio",
    "amateur radio",
    "voice services",
    "IRLP",
    "repeater",
    "AI",
    "LLM",
    "OpenAI",
    "GPT",
    "Whisper",
    "TTS",
    "speech recognition",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "PyAudio>=0.2.13",
    "pygame>=2.5.0",
    "SpeechRecognition>=3.10.0",
    "pySSTV>=0.5.0",
    "APScheduler>=3.10.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "telepot>=12.7",
    "pyTelegramBotAPI>=4.14.0",
    "tweepy>=4.14.0",
    "twython>=3.9.1",
    "dropbox>=11.36.2",
    "pyowm>=3.3.0",
    "pygeocoder>=1.2.5",
    "feedparser>=6.0.10",
    "xmltodict>=0.13.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "psutil>=5.9.0",
    "tendo>=0.3.0",
    "gitpython>=3.1.40",
    "python-dotenv>=1.0.0",
    "wolframalpha>=5.0.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[project.scripts]
nuupxe = "nuupxe:main"

[project.urls]
Homepage = "https://github.com/NuupXe/NuupXe"
Repository = "https://github.com/NuupXe/NuupXe"
Documentation = "https://github.com/NuupXe/NuupXe/tree/main/documentation"
Issues = "https://github.com/NuupXe/NuupXe/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.master]
ignore = "CVS,.git,__pycache__"
jobs = 0
persistent = "yes"

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0703",  # broad-except (we handle this explicitly)
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pygame.*",
    "telepot.*",
    "tweepy.*",
    "wolframalpha.*",
    "pyowm.*",
    "tendo.*",
    "feedparser.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=nuupxe",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["nuupxe"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
